--- a/Rust/package.json
+++ b/Rust/package.json
@@ -1,7 +1,7 @@
 {
   "package": "example",
   "engines": {
-    "node": "18 || 20 || 21"
+    "node": "18 || 20 || 21 || 22"
   },
   "devDependencies": {
     "@napi-rs/cli": "^2.18.3"
